--- a/.github/workflows/compile_examples.yml
+++ b/.github/workflows/compile_examples.yml
@@ -51,6 +51,6 @@ jobs:
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
-          branch: "master"
+          branch: "gh-pages"
           github_token: ${{ secrets.GITHUB_TOKEN }}
 
